<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jigsaw Puzzle FLOSS</string>

    <!-- Dialog: PuzzleActivity.handleOnBackPressed -->
    <string name="btnLeaveNot">Continue Puzzle</string>
    <string name="btnLeaveToMenu">Main Menu</string>
    <string name="btnLeaveApp">Quit</string>

    <!-- MainMenuFragment -->
    <string name="btnSettings">Settings</string>
    <string name="btnDownloadBitmap">Find images online…</string>
    <string name="btnOpenBitmap">Open image(s)…</string>
    <string name="lblStartedPuzzles">Started games</string>
    <string name="lblNoStartedPuzzles">&lt;No started games&gt;\n
        (Click on an image below to start a new game)</string>
    <string name="lblBitmaps">Images</string>
    <string name="lblNoBitmaps">&lt;Nothing here!&gt;\n
        (Download or open an image with the buttons below)</string>

    <!-- GeneratorFragment -->
    <string name="btnCropOnly">Show Larger Image</string>
    <string name="btnStart">Start</string>§
    <string name="lblNoSizeSelected"> Select a puzzle size below</string>
<!--    <string name="radioChooseSizeUnselected">~ %d pieces</string>-->
    <string name="radioChooseSize">~ %d pieces (%d×%d)</string>
    <string name="radioCustomSize">Custom: </string>
    <string name="lblCustomWidth">width</string>
    <string name="lblCustomHeight">height</string>
    <string name="lblCustomWxH">" × "</string>
    <string name="lblCustomSize">" = %d pieces"</string>

    <!-- Display strings -->
    <string name="group_default_name">Group %d</string>

    <!-- Prefs  -->
    <string name="preftitle_download_dir">Location for downloaded images</string>
    <string name="preftitle_download_source">Webpage with images</string>
    <string name="preftitle_size_choices">Puzzle sizes</string>
    <string name="prefdesc_size_choices">Choose between these sizes when starting a new puzzle (number of pieces, comma-separated)</string>


    <!-- UNSORTED RESOURCES BELOW THIS -->
    <string name="NEW_RESOURCES_BELOW_THIS">UNSORTED strings:</string>
    <string name="msg_error_open_url">Could not open URL. Please download using web browser.</string>


</resources>
